# snputils

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
benchmark/: README.md  association_plink_concordance.py  conftest.py  fstats_admixtools2_concordance.py  merge_benchmark_results.py  pca_eigenstrat_concordance.py  plot_time_memory.py  read_bcf.py  read_bed.py  read_bgen.py  read_pgen.py  read_vcf.py  utils.py  write_timeout_result.py
demos/: GRG.ipynb  PhenObj.ipynb  grgl_demo.ipynb
docs/: Makefile  changelog.md  conf.py  contributing.md  index.md  installation.md  license.md  quickstart.md
docs/_extra/: .nojekyll
docs/_static/: custom.css
docs/api/: ancestry.md  cli.md  datasets.md  ibd.md  index.md  modules.md  phenotypes.md  processing.md  simulation.md  snp.md  stats.md  tools.md  visualization.md
docs/tutorials/: admixture-mapping.ipynb  f-statistics.ipynb  grg.ipynb  index.md  local-ancestry-visualization.ipynb  maasmds.ipynb  mdpca-maasmds.ipynb  mdpca.ipynb  pca.ipynb  phenotype-object.ipynb  snp-allele-frequency.ipynb  snp-object.ipynb
docs/user_guide/: analysis.md  data-model.md  file-io.md  index.md  visualization.md
grgl/: test_grg.py
snputils/: __init__.py
snputils/__test__/: test_top_level_exports.py
snputils/_utils/: allele_freq.py  genotypes.py  labels.py  printing.py
snputils/ancestry/: __init__.py
snputils/ancestry/genobj/: base.py  local.py  wide.py
snputils/ancestry/io/: __init__.py
snputils/common/: _utils.py  utils.py
snputils/datasets/: __init__.py  _registry.py  load_dataset.py  synthetic.py  synthetic_admixture.py
snputils/datasets/__test__/: test_imports.py  test_load_dataset.py  test_synthetic.py
snputils/ibd/: __init__.py
snputils/ibd/genobj/: __init__.py  ibdobj.py
snputils/ibd/io/: __init__.py
snputils/phenotype/: __init__.py  covariates.py
snputils/processing/: __init__.py  dimred_tabular.py  maasmds.py  mdpca.py  pca.py
snputils/simulation/: _validation.py  simulator_cli.py
snputils/snp/: __init__.py
snputils/stats/: __init__.py  fstats.py  qp_export.py  streaming.py
snputils/tools/: __init__.py  _association.py  admixture_mapping.py  admixture_simulation.py  cli.py  gwas.py  main.py  pca.py
snputils/visualization/: __init__.py  _figure_export.py  admixture.py  admixture_manhattan_plot.py  base.svg.p  chromosome_painting.py  constants.py  lai.py  manhattan_plot.py  qq_plot.py  scatter_plot.py
(+108 files in other folders)
