[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "snputils"
dynamic = ["version"]  # Version is set by setuptools_scm and determined by the latest git tag
description = "Process genomes with ease"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy<2; python_version < '3.10'",
    "numpy; python_version >= '3.10'",
    "pandas",
    "pandas-stubs",
    "scikit-learn",
    "Pgenlib",
    "matplotlib",
    "joblib",
    "tqdm",
    "polars>=1.34",
    "plotly",
    "plotly_express",
    "nbformat",
    "adjustText",
    "zstandard",
    "pygrgl"
]

[project.optional-dependencies]
torch = ["torch"]
demos = ["jupyterlab", "seaborn"]
tests = ["tox", "pytest", "pytest-cov"]
docs = [
    "sphinx>=7.2",
    "furo>=2023.9.10",
    "myst-parser>=2.0",
    "myst-nb>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
]
benchmark = ["pytest", "pytest-benchmark", "memory_profiler",
             "pandas-plink", "pysam", "scikit-allel", "sgkit[plink]", "hail", "pysnptools", "Pgenlib", "cyvcf2", "plinkio", "PyVCF3"]

[project.urls]
"Homepage" = "https://snputils.org"
"Documentation" = "https://docs.snputils.org"
"Source Code" = "https://github.com/AI-sandbox/snputils"
"Issue Tracker" = "https://github.com/AI-sandbox/snputils/issues"

[project.scripts]
snputils = "snputils.tools.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snputils*"]

[tool.setuptools_scm]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py314
isolated_build=true
[gh-actions]
python =
    3.9: py39
    3.14: py314
[testenv]
passenv =
    CI
    GITHUB_ACTIONS
extras =
    tests
    torch
commands = python -m pytest -vv --color=yes --cov=snputils --cov-report=xml
"""
